--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "element-ui": "^2.12.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "video.js": "^7.6.5",
+    "vue-axios": "^2.1.5",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
